# Tester

./: .clang-format  .gitignore  CMakeLists.txt  README.md  contributors.txt
.github/workflows/: ci.yml
cmake/: symlink_to_bin.cmake
include/: Colors.h  Command.h  TestHarness.h  ToolChain.h  json.hpp  util.h
include/analysis/: Grader.h
include/analysis/spreadsheet/: Cell.h  Sheet.h  Table.h  Utility.h
include/config/: Config.h
include/testharness/: PathPair.h  ResultManager.h  ResultPair.h  TestHarness.h  TestPair.h  TestResult.h  TestResults.h
include/tests/: Constants.h  Directives.h  PathMatch.h  TestFile.h  TestFileParser.h  TestFinder.h  TestParser.h  TestResult.h  Util.h  testUtil.h
include/toolchain/: Command.h  CommandException.h  ExecutionState.h  ToolChain.h
src/: CMakeLists.txt  Command.cpp  TestHarness.cpp  ToolChain.cpp  main.cpp
src/analysis/: CMakeLists.txt  Grader.cpp
src/analysis/spreadsheet/: CMakeLists.txt  Cell.cpp  Sheet.cpp  Table.cpp  Utility.cpp
src/config/: CMakeLists.txt  Config.cpp
src/testharness/: CMakeLists.txt  TestHarness.cpp
src/tests/: CMakeLists.txt  TestFile.cpp  TestFinding.cpp  TestParser.cpp  TestRunning.cpp  testFinding.cpp  testRunning.cpp
src/toolchain/: CMakeLists.txt  Command.cpp  ToolChain.cpp
tests/: ConfigExpectedFail.json  ConfigGrade.json  ConfigMultiExe.json  ConfigRuntime.json  ConfigSingleExe.json  GradeTestConfig.json  MultipleBackendConfig.json  README.md  Refactor.json  TestConfig.json  UserTestConfig.json  build  build.sh  gazc.ll  grades.json  run_grader_tests.sh  run_tests.sh  run_user_tests.sh  runtime  test
tests/ctests/check_directives/: 003_newline.c
tests/ctests/comments/: 004_comment_block_inline.c
tests/ctests/errors/: 001_compile_time_types.c  001_type_error.c  002_runtime_math.c  002_two_strings_walk_into_a_bar.c
tests/ctests/io/: 002_input_multi.c  004_multi_nl_space.c  008_escape_seq.c  009_tab_newline.c
tests/fail_tests/: BasicConfig.json  run.sh
tests/fail_tests/tests/fail_tests/: 000_nl.c  002_error.c  003_error.c
tests/grade_tests/team1/: 001.c
tests/input/student/: simple.in
tests/lib/: foo.c  make_so.sh
tests/memory_tests/: Config.json
tests/multi_exe_tests/: Config.json  GradeConfig.json  MutliToolchain.json  grades.json  results.json  run_tests.sh  test  tournament.json
tests/multi_exe_tests/tests/team1/: 002.c
tests/multi_exe_tests/tests/team2/: 001.c
tests/multi_exe_tests/tests/team3/: 001.c
tests/multi_exe_tests/tests/timed_tests/: 001.c  002.c  003_timeout.c
tests/output/student/: simple.out
tests/scripts/: build.sh  clean.sh  convert_tests.sh  copy_tests.sh  gen_config.sh  grade.py  grader.py  output.csv
tests/single_exe_tests/: MutliStageConfig.json  run.sh  run_tests.sh  test
tests/single_exe_tests/tests/error_tests/: 001_compile_time_types.c  003_runtime_index.c
tests/single_exe_tests/tests/invalid_tests/: 001_input_exceed.c  003_file_errror.c  005_directive_conflict.c
tests/single_exe_tests/tests/invalid_tests/out-stream/: output_exceed.out
tests/single_exe_tests/tests/valid_tests/: 002_comment_mixed.c  003_input_file.c  004_multi_nl_space.c  006_comment_mixed2.c  007_string_escape.c  008_escape_seq.c  009_tab_newline.c  010_newline_check.c  012_space_check.c  014_timings_test.c  015_timing_test.c  016_fib.c
tests/testfiles/ExpectedFail/tests/: 000_nl.c  001_space.c  002_error.c  003_error.c
tests/testfiles/GradePackages/team1/: 002.c  003_timeout.c  004_error.c
tests/testfiles/GradePackages/team2/: 001_mismatch.c
tests/testfiles/MultiExe/timed_tests/: 002.c  004_error.c
tests/testfiles/Runtime/tests/: 001_extern.c
tests/testfiles/SingleExe/error_tests/: 001_compile_time_types.c  002_runtime_math.c  003_runtime_index.c  004_lenient_error_ct.c  005_lenient_error_rt.c
tests/testfiles/SingleExe/invalid_tests/: 002_output_exceed.c
tests/testfiles/SingleExe/valid_tests/: 000_empty.c  002_comment_mixed.c  004_check_multi.c  008_escape_seq.c  009_tab_newline.c  010_newline_check.c  013_io_multi.c  014_timings_test.c
tests/testfiles/converts/: 001.test
tests/testfiles/converts/dev/: filter_integers.test
tests/testfiles/package1/io/: check_file.test  input_file.cc  stdin.cc
tests/testfiles/package1/vectors/: vec.cc  vec.test
tests/testfiles/package2/: top_level.test
tests/testfiles/package2/hard-tests/: tuple.cc
tests/user_tests/comments/: 001_comment_line.c  002_comment_block.c
tests/user_tests/errors/: 001_compile_time_types.c  002_runtime_math.c
tests/user_tests/invalid/: 001_input_exceed.c  002_output_exceed.c  004_directive_conflict.c  output_exceed.out
tests/user_tests/io/: 001_basic_clang.c  002_input_multi.c  003_input_file.c  006_check_newline.c  008_escape_seq.out  a.out
(+100 files in other folders)
